fix(editor-common): app info wrong background color

--- a/src/app/editor-common/components/app-info/app-info.component.scss
+++ b/src/app/editor-common/components/app-info/app-info.component.scss
@@ -5,7 +5,7 @@
     width: 100%;
     padding: 20px;
     display: block;
-    background: $panel-bg;
+    background: $body-bg;
 
     ct-inline-editor {
         diplay: inline-block;
